--- a/style/main.css
+++ b/style/main.css
@@ -97,6 +97,52 @@ h1.title {
 	display: block;
 }
 
+.game-message {
+	margin-top: 15px;
+	position: absolute;
+	padding: 15px;
+	cursor: default;
+	background: black;
+	border-radius: 6px;
+	width: 485px;
+	height: 485px;
+	transform: translate(0,-530px);
+	opacity: 0.7;
+	display: block;
+}
+
+.message-text {
+	font-size: 60px;
+	font-weight: bold;
+	margin: 0;
+	margin-top: 115px;
+	display: block;
+	text-align: center;
+	color: green;
+}
+
+.message-btn {
+	display: inline-block;
+	width: 70px;
+	margin: 0;
+	z-index: 2;
+	color: #f9f6f2;
+	text-align: center;
+	line-height: 32px;
+	background: #0053B8;
+	border-radius: 3px;
+	cursor: pointer;
+	margin-right: 10px;
+	float: left;
+	display: block;
+	opacity: 1;
+}
+
+.message-btn-container {
+	margin: 0;
+	transform: translate(165px,120px);
+}
+
 .game-container {
 	margin-top: 15px;
 	position: relative;
@@ -133,6 +179,7 @@ h1.title {
 	font-weight: bold;
 	text-align: center;
 	z-index: 2;
+	text-decoration: underline;
 }
 
 .win {
