--- a/style/main.css
+++ b/style/main.css
@@ -3,7 +3,7 @@ html, body {
   padding: 0;
   background: #dcd9dc;
   color: #776e65;
-  font-family: ""Clear Sans", "Helvetica Neue", Arial, sans-serif";
+  font-family: "Clear Sans", "Helvetica Neue", Arial, sans-serif;
   font-size: 18px; 
 }
 
